# AgentWall

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_WORKFLOW.md  INSTALLATION_GUIDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  SECURITY.md  TESTING_GUIDE.md  pyproject.toml
agentwall/: __init__.py  auto.py
agentwall/cli/: main.py
agentwall/core/: config_manager.py  event_manager.py  execution_manager.py  project.py  session_manager.py  types.py
agentwall/inspector/: deps.py  desktop.py  event_bus.py  server.py
agentwall/inspector/routes/: events.py  executions.py  export.py  goals.py  health.py  overview.py  policies.py  projects.py  providers.py  refresh.py  sessions.py  ws.py
agentwall/inspector/ui/: index.html  package-lock.json  package.json  vite.config.ts
agentwall/inspector/ui/src/: App.tsx
agentwall/inspector/ui/src/api/: client.ts
agentwall/inspector/ui/src/components/: Badge.tsx  EventTimeline.tsx  NavBar.tsx  SessionList.tsx
agentwall/inspector/ui/src/pages/: Executions.tsx  Overview.tsx  Policies.tsx  Providers.tsx  Sessions.tsx  Timeline.tsx
agentwall/integrations/: __init__.py  crewai.py  langchain.py  openai_agents.py
agentwall/interceptors/: __init__.py  agent.py  base.py  tool.py
agentwall/models/: schemas.py
agentwall/providers/: anthropic.py  base.py  chain.py  deepseek.py  groq.py  keyring.py  ollama.py  openai.py  registry.py
agentwall/security/: __init__.py  detectors.py  engine.py  exceptions.py  goal_tracker.py  policy_engine.py  result_analyzer.py  rules.py
agentwall/storage/: database.py  models.py
agentwall/utils/: classifier.py
examples/: demo.py
examples/crewai/: example.py
examples/langchain/: example.py
examples/openai_agents/: example.py
tests/: conftest.py  test_auto_instrumentation.py  test_cli.py  test_config_manager.py  test_detectors.py  test_engine_defaults.py  test_event_bus.py  test_event_manager.py  test_goal_drift_detector.py  test_goal_inference.py  test_goal_tracker.py  test_inspector_desktop.py  test_inspector_routes.py  test_interceptors.py  test_parse_robust.py  test_policy_engine.py  test_policy_priority.py  test_policy_templates.py  test_post_execution.py  test_project_isolation.py  test_provider_keyring.py  test_providers.py  test_registry.py  test_result_analyzer.py  test_security_engine.py  test_security_rules.py  test_session_manager.py  test_storage.py  test_tool_classifier.py
tests/integration/: test_crewai_integration.py  test_langchain_integration.py  test_openai_agents_integration.py
