[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentwall-security"
version = "0.2.8"
description = "AI Agent Runtime Security Platform — runtime security and behavioral monitoring for agentic AI systems"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rwitabrata Pan" }]
keywords = ["ai", "agents", "security", "runtime", "llm", "guardrails", "monitoring"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "typer>=0.12",
    "keyring>=24.0",
    "httpx>=0.27",
    "openai>=1.30",
    "anthropic>=0.25",
    "pywebview>=5.0",
]

[project.urls]
Homepage = "https://github.com/RwitabrataPan/AgentWall"
Repository = "https://github.com/RwitabrataPan/AgentWall"
Issues = "https://github.com/RwitabrataPan/AgentWall/issues"
Changelog = "https://github.com/RwitabrataPan/AgentWall/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
openai-agents = [
    "openai-agents>=0.17",
]
langchain = [
    "langchain>=0.3",
    "langchain-openai>=0.2",
]
crewai = [
    "crewai>=0.80",
]
integrations = [
    "openai-agents>=0.17",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "crewai>=0.80",
]

[project.scripts]
agentwall = "agentwall.cli.main:app"

[tool.hatch.build.targets.wheel]
include = ["agentwall/**"]
exclude = [
    "agentwall/inspector/ui/node_modules/**",
    "agentwall/inspector/ui/src/**",
    "agentwall/inspector/ui/package.json",
    "agentwall/inspector/ui/package-lock.json",
    "agentwall/inspector/ui/tsconfig.json",
    "agentwall/inspector/ui/tailwind.config.js",
    "agentwall/inspector/ui/postcss.config.js",
    "agentwall/inspector/ui/vite.config.ts",
    "agentwall/inspector/ui/index.html",
    "agentwall/**/__pycache__/**",
    "agentwall/**/*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"agentwall/inspector/ui/dist" = "agentwall/inspector/ui/dist"

[tool.hatch.build.targets.sdist]
include = [
    "agentwall/**",
    "tests/**",
    "examples/**",
    "pyproject.toml",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    "agentwall/inspector/ui/node_modules/**",
    "agentwall/**/__pycache__/**",
    "agentwall/**/*.pyc",
]

[tool.hatch.build.targets.sdist.force-include]
"agentwall/inspector/ui/dist" = "agentwall/inspector/ui/dist"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
